[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.11", features = ["csr"] }
log = "0.4.21"
leptos_meta = { version = "0.6.11", features = ["csr"] }
gloo-net = { version = "0.5", features = ["http"] }

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1" }
